--- a/hmlr_design_system/settings/variables.scss
+++ b/hmlr_design_system/settings/variables.scss
@@ -6,6 +6,7 @@ $hmlr-green-3: #87c426;
 
 $hmlr-grid-padding: 40px;
 $hmlr-grid-column-width: 300px;
+$hmlr-grid-start-breakpoint: 3.33 * $hmlr-grid-column-width;
 
 $font-size: 16px;
 $font-size--meta: 14px;
